k8s/apps/stg-app/ai-stg.yaml
# Service 정의
apiVersion: v1
kind: Service

metadata:
  name: ai-stg-service
  namespace: stg-app

# 스펙 지정
spec:
  type: ClusterIP

  # 셀렉터로 어느 Pod에 접근할 것인지
  selector:
    app: ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
# Deployment 정의
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devths-stg-ai
  namespace: stg-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ai

  template:
    metadata:
      labels:
        app: ai

    spec:

      containers:
        - name: devths-ai
          image: ${ECR_IMAGE}
          ports:
            - containerPort: 8000
