k8s/apps/stg-app/frontend-stg.yaml
# Service 정의
apiVersion: v1
kind: Service

metadata:
  name: frontend-stg-service
  namespace: stg-app

# 스펙 지정
spec:
  type: ClusterIP

  # 셀렉터로 어느 Pod에 접근할 것인지
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
# Deployment 정의
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devths-stg-frontend
  namespace: stg-app

# Deployment 스펙 지정
spec:
  # Pod 레플리카 개수 지정
  replicas: 2

  # 셀렉터 지정
  selector:
    matchLabels:
      app: frontend

# Pod 정보 지정
  template:
    metadata:
      labels:
        app: frontend

    # Pod 스펙 지정
    spec:
      containers:
        # 컨테이너 이름 지정
        - name: devths-fe
          # 컨테이너 이미지
          image: ${ECR_IMAGE}
          # 포트 지정
          ports:
            - containerPort: 3000
